--- a/SmartOfficeMetro/SmartOfficeMetro/NotificationTile.xaml
+++ b/SmartOfficeMetro/SmartOfficeMetro/NotificationTile.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SmartOfficeMetro"
-             mc:Ignorable="d" Height="30.22" Width="392.395">
+             mc:Ignorable="d" Height="30.22" Width="392.395" BorderThickness="0,0,0,1" BorderBrush="#FF666666">
     <!-- 34.22 -->
     <Grid x:Name="TileRow">
         <Grid.RowDefinitions>
@@ -12,23 +12,26 @@
             <RowDefinition Height="120"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="4*"/>
-            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <ScrollViewer x:Name="descriptionPanel" Margin="0,0,-2,0" Grid.ColumnSpan="2" Grid.Column="1" Grid.Row="1" Visibility="Visible" Panel.ZIndex="1" >
+        <ScrollViewer x:Name="descriptionPanel" Margin="0,0,-2,0" Grid.ColumnSpan="2" Grid.Column="2" Grid.Row="1" Visibility="Visible" Panel.ZIndex="1" ScrollChanged="descriptionPanel_ScrollChanged" >
             <Grid>
-                <Label x:Name="labelDescription" Content="Test Content" Foreground="White" FontSize="16" Panel.ZIndex="1"/>
+             <!--   <Label x:Name="labelDescription" Content="Test Content" Foreground="White" FontSize="16" Panel.ZIndex="1"/>-->
+                <TextBlock x:Name="textDescription" Text="description here" Foreground="WhiteSmoke" FontSize="16" Panel.ZIndex="1" TextWrapping="WrapWithOverflow"/>
             </Grid>
         </ScrollViewer>
 
 
 
-        <Label x:Name="labelHeader" Content="Content estttt" Grid.Column="1" Margin="0,0,0,0" FontSize="16" Foreground="White" Panel.ZIndex="1" />
-        <Label x:Name="labelSender" Content="Label" Margin="10,0,0,0" Foreground="White" FontSize="14.667" Panel.ZIndex="1"/>
+        <Label x:Name="labelHeader" Content="Content estttt" Grid.Column="2" Margin="0,0,0,0" FontSize="16" Foreground="White" Panel.ZIndex="1" />
+        <Label x:Name="labelTime" Content="Label" Margin="10,0,0,0" Foreground="White" FontSize="14.667" Panel.ZIndex="1" Grid.ColumnSpan="1" Grid.Column="0"/>
+        <Label x:Name="labelSender" Content="Label" Margin="10,0,0,0" Foreground="White" FontSize="14.667" Panel.ZIndex="1" Grid.ColumnSpan="1" Grid.Column="1"/>
 
-        <Rectangle x:Name="highligter" Grid.ColumnSpan="3" Height="28" Margin="0,0,-2,0" VerticalAlignment="Top" MouseLeftButtonDown="LabelHeader_MouseLeftButtonDown" Panel.ZIndex="2">
+        <Rectangle x:Name="highligter" Grid.ColumnSpan="4" Height="28" Margin="0,0,-2,0" VerticalAlignment="Top" MouseLeftButtonDown="LabelHeader_MouseLeftButtonDown" Panel.ZIndex="2">
             <Rectangle.Style>
                 <Style TargetType="Rectangle">
 
@@ -42,7 +45,7 @@
                 </Style>
             </Rectangle.Style>
         </Rectangle>
-        <Button x:Name="buttonFetch" Content="Fetch Mail" HorizontalAlignment="Left" Margin="0,0,-16,0" VerticalAlignment="Top" Width="65" Panel.ZIndex="2" Grid.Column="2" />
+        <Button x:Name="buttonFetch" Content="Fetch Mail" HorizontalAlignment="Left" VerticalAlignment="Top" Width="65" Panel.ZIndex="2" Grid.Column="3" />
 
 
     </Grid>
